--- a/configs/log_Configs.json
+++ b/configs/log_Configs.json
@@ -12,7 +12,7 @@
         },
         "file": {
             "class": "logging.handlers.RotatingFileHandler",
-            "filename": "./configs/logs/app.log",
+            "filename": "./logs/app.log",
             "formatter": "default",
             "maxBytes": 1024,
             "backupCount": 0
